--- a/3JS运动/1运动基础/index.css
+++ b/3JS运动/1运动基础/index.css
@@ -37,3 +37,36 @@
     position: absolute;
     left: 400px;
 }
+.bufferMove {
+    position: absolute;
+    top:420px;
+}
+.bufferBox {
+    width: 150px;
+    height: 150px;
+    background-color: red;
+    position: absolute;
+    /* left: 500px; */
+}
+.hangBox {
+    width: 50px;
+    height: 150px;
+    background-color: red;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+.firstLine {
+    width: 1px;
+    height: 400px;
+    background-color: #000;
+    position: absolute;
+    left: 200px;
+}
+.secondLine {
+    width: 1px;
+    height: 400px;
+    background-color: #000;
+    position: absolute;
+    left: 400px;
+}
